# operations-debs-contenttranslation-apertium-is-sv

./: AUTHORS  Makefile.am  apertium-is-sv.is-sv.dix  apertium-is-sv.is-sv.rlx  apertium-is-sv.is-sv.t1x  apertium-is-sv.is-sv.t2x  apertium-is-sv.is-sv.t3x  apertium-is-sv.sv-is.rlx  apertium-is-sv.sv-is.t1x  apertium-is-sv.sv-is.t2x  apertium-is-sv.sv-is.t3x  apertium-is-sv.sv.dix  apertium-is-sv_0.1.0~r56030.orig.tar.gz.delta  apertium-is-sv_0.1.0~r56030.orig.tar.gz.id  apertium-is-sv_0.1.0~r76450.orig.tar.bz2.delta  apertium-is-sv_0.1.0~r76450.orig.tar.bz2.id  configure.ac  modes.xml  pending-tests.sh  regression-tests.sh  wiki-tests.sh
debian/: changelog  control
dev/: bilingual-summary.txt  generation-summary.is-sv.txt  generation-test.is-sv.sh  generation-test.sv-is.sh  inconsistency-summary.sh  inconsistency.sh  interwiki.top.txt  missing-bidix-freq.sh  sv.top10000.txt  testvoc-summary.is-sv.txt  testvoc-summary.sv-is.txt  testvoc.sh
dev/bidix/: pending_nouns.txt  pending_numerals.txt  pending_proper_nouns.txt
dev/eval/: test_result.APERTIUM.IS-SV.txt  test_result.APERTIUM.edited.IS-SV.txt  test_result.APERTIUM.edited.sv-is.txt  test_result.APERTIUM.sv-is.txt  test_result.GOOGLE.IS-SV.txt  test_result.GOOGLE.edited.IS-SV.txt  test_result.GOOGLE.edited.sv-is.txt  test_result.GOOGLE.sv-is.txt  test_sentences.IS-SV.txt  test_sentences.sv-is.txt
